2008-05-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Fix paths to allow out-of-dir build.
	* Makefile.in: Regenerated.
	* patches/openjdk-ecj.patch:
	Regenerated for b26.
	
2008-05-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* generated/java/lang/UNIXProcess.java:
	Removed.
	* Makefile.am:
	Copy appropriate UNIXProcess.java to generated. 
	* Makefile.in: Regenerated.
	* acinclude.m4:
	(SET_OS): Work out the BUILD_OS variable. 
	* configure: Regenerated.
	* configure.ac: Run SET_OS.

2008-05-24  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Revert OpenJDK patches
	last and use -p1.
	* Makefile.in: Regenerated.
	* patches/icedtea-ant.patch,
	* patches/icedtea-core-build.patch,
	* patches/icedtea-libraries.patch,
	* patches/icedtea-memory-limits.patch,
	* patches/icedtea-static-libstdc++.patch,
	* patches/icedtea-sunsrc.patch,
	* patches/icedtea-zero-build.patch:
	Updated for b26.

2008-05-23  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/icedtea-headers.patch: Updated
	for OpenJDK b26.
	
2008-05-23  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/openjdk-color.patch: Add
	OpenJDK color patch from Java2D tree.
	
2008-05-23  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Add support for reverting
	OpenJDK patches.
	* Makefile.in: Regenerated.
	* patches/icedtea-copy-plugs.patch: Updated
	for OpenJDK7 b26.
	
2008-05-23  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Add support for using
	OpenJDK patches (diffs from non-master
	repositories)
	* Makefile.in: Regenerated.
	
2008-05-19  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Move build back to using
	OpenJDK Mercurial repository after merge,
	and upgrade to b26.
	* Makefile.in: Regenerated.
	
2008-05-16  Mark Wielaard  <mark@klomp.org>

	* patches/icedtea-sparc.patch: Merge os_linux_sparc.cpp patch hunks.

2008-05-15  Matthias Klose  <doko@ubuntu.com>
